caproto/v0.8.1/_sources/generated/caproto.server.records.SeqFields.rst.txt
caproto.server.records.SeqFields
================================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: SeqFields

.. autoclass:: SeqFields

    .. if not using autodoc, add this here: automethod:: __init__

    

    
    
        .. note:: To use this, specify
                  ``record="seq"`` in a
                  :class:`pvproperty`.
    
    

    
    
    .. list-table:: SeqFields pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - CHAR 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - delay_0
           - ``DLY0``
           - Delay 0
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_1
           - ``DLY1``
           - Delay 1
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_10
           - ``DLYA``
           - Delay 10
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_11
           - ``DLYB``
           - Delay 11
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_12
           - ``DLYC``
           - Delay 12
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_13
           - ``DLYD``
           - Delay 13
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_14
           - ``DLYE``
           - Delay 14
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_15
           - ``DLYF``
           - Delay 15
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_2
           - ``DLY2``
           - Delay 2
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_3
           - ``DLY3``
           - Delay 3
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_4
           - ``DLY4``
           - Delay 4
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_5
           - ``DLY5``
           - Delay 5
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_6
           - ``DLY6``
           - Delay 6
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_7
           - ``DLY7``
           - Delay 7
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_8
           - ``DLY8``
           - Delay 8
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - delay_9
           - ``DLY9``
           - Delay 9
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - CHAR 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - display_precision
           - ``PREC``
           - Display Precision
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
                 **Get**
                 **Put**
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - CHAR 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - input_link1
           - ``DOL1``
           - Input link1
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_0
           - ``DOL0``
           - Input link 0
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_10
           - ``DOLA``
           - Input link 10
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_11
           - ``DOLB``
           - Input link 11
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_12
           - ``DOLC``
           - Input link 12
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_13
           - ``DOLD``
           - Input link 13
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_14
           - ``DOLE``
           - Input link 14
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_15
           - ``DOLF``
           - Input link 15
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_2
           - ``DOL2``
           - Input link 2
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_3
           - ``DOL3``
           - Input link 3
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_4
           - ``DOL4``
           - Input link 4
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_5
           - ``DOL5``
           - Input link 5
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_6
           - ``DOL6``
           - Input link 6
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_7
           - ``DOL7``
           - Input link 7
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_8
           - ``DOL8``
           - Input link 8
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - input_link_9
           - ``DOL9``
           - Input link 9
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - link_selection
           - ``SELN``
           - Link Selection
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - link_selection_loc
           - ``SELL``
           - Link Selection Loc
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - offset_for_specified
           - ``OFFS``
           - Offset for Specified
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - old_selection
           - ``OLDN``
           - Old Selection
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_0
           - ``LNK0``
           - Output Link 0
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_1
           - ``LNK1``
           - Output Link 1
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_10
           - ``LNKA``
           - Output Link 10
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_11
           - ``LNKB``
           - Output Link 11
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_12
           - ``LNKC``
           - Output Link 12
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_13
           - ``LNKD``
           - Output Link 13
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_14
           - ``LNKE``
           - Output Link 14
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_15
           - ``LNKF``
           - Output Link 15
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_2
           - ``LNK2``
           - Output Link 2
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_3
           - ``LNK3``
           - Output Link 3
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_4
           - ``LNK4``
           - Output Link 4
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_5
           - ``LNK5``
           - Output Link 5
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_6
           - ``LNK6``
           - Output Link 6
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_7
           - ``LNK7``
           - Output Link 7
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_8
           - ``LNK8``
           - Output Link 8
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - output_link_9
           - ``LNK9``
           - Output Link 9
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - CHAR 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - STRING 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.records.RecordFieldGroup`
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess 
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - select_mechanism
           - ``SELM``
           - Select Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - shift_for_mask_mode
           - ``SHFT``
           - Shift for Mask mode
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - value_0
           - ``DO0``
           - Value 0
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_1
           - ``DO1``
           - Value 1
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_10
           - ``DOA``
           - Value 10
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_11
           - ``DOB``
           - Value 11
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_12
           - ``DOC``
           - Value 12
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_13
           - ``DOD``
           - Value 13
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_14
           - ``DOE``
           - Value 14
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_15
           - ``DOF``
           - Value 15
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_2
           - ``DO2``
           - Value 2
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_3
           - ``DO3``
           - Value 3
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_4
           - ``DO4``
           - Value 4
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_5
           - ``DO5``
           - Value 5
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_6
           - ``DO6``
           - Value 6
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_7
           - ``DO7``
           - Value 7
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_8
           - ``DO8``
           - Value 8
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
        *  - value_9
           - ``DO9``
           - Value 9
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.SeqFields`
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~SeqFields.group_read
       ~SeqFields.group_write
       ~SeqFields.publish
       ~SeqFields.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~SeqFields.default_values
       ~SeqFields.has_val_field
       ~SeqFields.scan_rate_sec
       ~SeqFields.type_map
       ~SeqFields.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: display_precision.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40